--- a/Movies management/Movies management.vcxproj
+++ b/Movies management/Movies management.vcxproj
@@ -129,6 +129,10 @@
   <ItemGroup>
     <ClCompile Include="Source.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="movies.h" />
+    <ClInclude Include="Users.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
